# OblivionTrapSoulAppropriateSize

./: .clang-format  CMakeLists.txt  README.md  dllmain.cpp  main.cpp  main.h  utils.cpp  utils.h  version.rc.in
OBSE/obse64/: PluginAPI.h
